<resources>
    <plurals name="new_releases_notif_header">
        <item quantity="one">%d new release today</item>
        <item quantity="other">%d new releases today</item>
    </plurals>
    <string name="app_name">PrimeTime</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_introduction">Introduction</string>
    <string name="title_activity_select_movie">Select Movie</string>
    <string name="select_genres_header">What are your favorite genres?</string>
    <string name="close">Close</string>
    <string name="ok">OK</string>
    <string name="undo">Undo</string>
    <string name="personalized_recommendations">Personalized recommendations</string>
    <string name="rate_movie">Rate “%s”</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Remove</string>
    <string name="watched_it">Watched it</string>
    <string name="like">It was great</string>
    <string name="dislike">Didn’t like it</string>
    <string name="error_getting_movies">An error occurred. Please try again.</string>
    <string name="watchlist_error_title">No movies in your Watchlist</string>
    <string name="watchlist_error_text">Go ahead and add some by tapping “Add to Watchlist” when swiping through recommendations.</string>
    <string name="select_movies_header">What are your favorite movies?</string>
    <string name="select_movies_text">Mark some that you’ve liked.</string>
    <string name="finish">Finish</string>
    <string name="no_more_recommendations">No more recommendations</string>
    <string name="add_to_watchlist">Add to watchlist</string>
    <string name="added_to_watchlist">Added to watchlist</string>
    <string name="remove_from_watchlist">Remove from watchlist</string>
    <string name="downloading_recommendations">Downloading recommendations</string>
    <string name="not_connected">You are not connected to the Internet.</string>
    <string name="categories">Categories</string>
    <string name="refresh">Refresh</string>
    <string name="about">About</string>
    <string name="recommendations">Recommendations</string>
    <string name="watchlist">Watchlist</string>
    <string name="more_info">More info</string>
    <string name="poster_content_description">Widescreen movie poster</string>
    <string name="movie_referrer">Recommendation based on %s</string>
    <string name="movie_referrer_unavailable">Recommendation based on: Not available</string>
    <string name="version">Version %s</string>
    <string name="faq_header">Thanks for downloading.</string>
    <string name="faq_tmdb_notice"><small>This product uses the TMDb API but is not endorsed or certified by TMDb.</small></string>
    <string name="settings">Settings</string>
    <string name="error_text">An error occurred</string>
    <string name="error_already_in_genres">You selected the following genres in both “Preferred genres” and “Excluded genres”:\n\n%s\n\nA genre can only be added to one of them, not both. Your changes will not be saved.</string>
    <string name="need_more_genres">At least 2 genres have to stay checked in order to provide recommendations. Your changes will not be saved.</string>
    <string name="preferred_genres_summary">Select the genres that you want recommendations from</string>
    <string name="streaming_services_summary">Select the streaming services you use</string>
    <string name="excluded_genres_summary">Select genres that you don’t want to appear in your recommendations</string>
    <string name="title_activity_history">History</string>
    <string name="try_again_in_seconds">Please try again in a few seconds.</string>
    <string name="try_again">Try again</string>
    <string name="title_activity_watchlist">Watchlist</string>
    <string name="watchlist_removed">Removed from watchlist</string>
    <string name="movie_poster">Movie poster</string>
    <string name="history_need_4_movies">At least 4 movies have to stayed rated in order to provide recommendations.</string>
    <string name="not_available">Not available</string>
    <string name="error_select_movie">The sample movies couldn’t be downloaded. Try again or restart PrimeTime.</string>
    <string name="remove_from_history">Remove from history</string>
    <string name="show_similar_movies">Show similar movies</string>
    <string name="preferred_genres">Favorite genres</string>
    <string name="excluded_genres">Excluded genres</string>
    <string name="recommendation_settings">Recommendations</string>
    <string name="about_the_app">About the app</string>
    <string name="rate_on_play_store">Rate PrimeTime on the Play Store</string>
    <string name="email_dev">E-mail the developer</string>
    <string name="welcome_header">Welcome to PrimeTime</string>
    <string name="welcome_text">Find movies that you’ll love</string>
    <string name="couldnt_add_rating">Rating couldn’t be added.</string>
    <string name="go_to_recommendations">Go to my recommendations</string>
    <string name="added_on">%1$s on %2$s</string>
    <string name="liked">Liked</string>
    <string name="disliked">Disliked</string>
    <string name="random_download_text_01">Just sit tight for a second …</string>
    <string name="random_download_text_02">It’s only a matter of seconds …</string>
    <string name="random_download_text_03">Opening up the movie theater …</string>
    <string name="random_download_text_04">Still busy painting the movie posters …</string>
    <string name="random_download_text_05">Still looking for the movie tickets …</string>
    <string name="random_download_text_06">The actors are still putting on their makeup …</string>
    <string name="random_download_text_07">Patience is a virtue …</string>
    <string name="show_more_like_this">Show more like this</string>
    <string name="show_less_like_this">Show less like this</string>
    <string name="will_more_like_this">Will show more like this</string>
    <string name="will_less_like_this">Will show less like this</string>
    <string name="removed_like">Removed like</string>
    <string name="removed_dislike">Removed dislike</string>
    <string name="downloading_samples">Downloading some sample movies</string>
    <string name="movie_based_recommendations">Recommendation based on movie</string>
    <string name="search">Search</string>
    <string name="no_results_found">No results found</string>
    <string name="try_again_search_text">Check your spelling or try another keyword.</string>
    <string name="currently_popular">Currently popular</string>
    <string name="no_similar_movies_header">No similar movies</string>
    <string name="no_similar_movies_text">Couldn’t find similar movies. Maybe try recommendations based on a genre or a specific movie?</string>
    <string name="error_downloading_movies">Error downloading movies</string>
    <string name="adjust_recommendations">Adjust future recommendations</string>
    <string name="no_information">–</string>
    <string name="settings_email_text">\n\n\n---\n\nDevice information:\n– Manufacturer: %1$s\n– Device name: %2$s\n– Android version: %3$s</string>
    <string name="try_other_recommendation_source">Maybe try a recommendation by genre or based on a specific movie?</string>
    <string name="try_it">Try it</string>
    <string name="get_started">Get started</string>
    <string name="access_open_rating_dialog">Open rating dialog</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="edit_rating">Edit rating</string>
    <string name="updating_rating">Updating rating …</string>
    <string name="access_logo_tmdb">Logo of The Movie Database</string>
    <string name="access_app_icon">App icon</string>
    <string name="access_background_image">Background image</string>
    <string name="access_movie_poster">Movie poster</string>
    <string name="access_movie_poster_samples">Movie poster of </string>
    <string name="genre_referrer">genre %s</string>
    <string name="remove_rating">Remove rating</string>
    <string name="loading">Loading …</string>
    <string name="watch_trailer">Watch trailer</string>
    <string name="show_more">Show more …</string>
    <string name="show_less">Show less …</string>
    <string name="removing_like">Removed like</string>
    <string name="clear_search">Clear search</string>
    <string name="removed_from_history">Removed from history</string>
    <string name="now_playing">Now playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="release_on">Release on %s</string>
    <string name="notify_release_date">Notify on %s at 9am</string>
    <string name="dont_notify">Don’t notify</string>
    <string name="done">Done</string>
    <string name="release_notifications">Release notifications</string>
    <string name="genres">Genres</string>
    <string name="opening_trailer">Opening trailer …</string>
    <string name="release_notifications_summary">Notify me when a movie on my watchlist is released</string>
    <string name="release_notifications_title">Notify about theater releases</string>
    <string name="showing_notification_on">Showing notification on %s</string>
    <string name="notification_off">Notification turned off</string>
    <string name="remove_from_watchlist_header">Remove from watchlist?</string>
    <string name="select_at_least">Select at least %d movies</string>
    <string name="action">Action</string>
    <string name="adventure">Adventure</string>
    <string name="animation">Animation</string>
    <string name="comedy">Comedy</string>
    <string name="crime">Crime</string>
    <string name="documentary">Documentary</string>
    <string name="drama">Drama</string>
    <string name="family">Family</string>
    <string name="fantasy">Fantasy</string>
    <string name="foreign">Foreign</string>
    <string name="history">History</string>
    <string name="horror">Horror</string>
    <string name="music">Music</string>
    <string name="mystery">Mystery</string>
    <string name="romance">Romance</string>
    <string name="science_fiction">Science Fiction</string>
    <string name="tv_movie">TV Movie</string>
    <string name="thriller">Thriller</string>
    <string name="war">War</string>
    <string name="western">Western</string>
    <string name="home">Home</string>
    <string name="next">Next</string>
    <string name="discover">Discover</string>
    <string name="cant_remove_more_items">Can’t remove more items.</string>
    <string name="select_more_format_string">Select %d more</string>
    <string name="filter">Filter</string>
    <string name="filter_recommendations">Filter recommendations</string>
    <string name="skip">Skip</string>
    <string name="streaming_services">Streaming services</string>
    <string name="available_on_format_string">Available on %s</string>
    <string name="similar_movies">Similar movies</string>
    <string name="no_recommendations_available">No recommendations available</string>
    <plurals name="vote_count_format_string">
        <item quantity="one">%d votes</item>
        <item quantity="other">%d votes</item>
    </plurals>
    <string name="thousand_votes_format_string">%dK votes</string>
    <string name="duration">Duration</string>
    <string name="release">Release</string>
    <string name="no_reviews_available">No reviews available</string>
    <string name="reviews">Reviews</string>
    <string name="dismiss">Dismiss</string>
</resources>