<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/recommendation_settings">

        <MultiSelectListPreference
            android:dialogTitle="@string/preferred_genres"
            android:key="primetime_my_genres"
            android:summary="@string/preferred_genres_summary"
            android:title="@string/preferred_genres" />

        <MultiSelectListPreference
            android:dialogTitle="@string/excluded_genres"
            android:key="primetime_excluded_genres"
            android:summary="@string/excluded_genres_summary"
            android:title="@string/excluded_genres" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/release_notifications">

        <SwitchPreference
            android:defaultValue="true"
            android:key="primetime_release_notifications"
            android:summary="@string/release_notifications_summary"
            android:title="@string/release_notifications_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about_the_app">

        <PreferenceScreen
            android:key="primetime_rate_playstore"
            android:title="@string/rate_on_play_store" />

        <PreferenceScreen
            android:key="primetime_about_app"
            android:title="@string/about" />

    </PreferenceCategory>

</PreferenceScreen>