<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.MainActivity">

    <!-- Watchlist -->
    <item
        android:id="@+id/action_watchlist"
        android:icon="@drawable/ic_video_library_white_24dp"
        android:title="@string/watchlist"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_genre_recommendations"
        android:icon="@drawable/ic_list_white_24dp"
        android:title="@string/categories"
        app:showAsAction="ifRoom" />

    <!-- Refresh -->
    <item
        android:id="@+id/action_refresh"
        android:title="@string/refresh"
        app:showAsAction="never" />

    <!-- History -->
    <item
        android:id="@+id/action_history"
        android:title="@string/title_activity_history"
        app:showAsAction="never" />

    <!-- Settings -->
    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never" />

</menu>