<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.about.AboutActivity">

    <include layout="@layout/view_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/access_app_icon"
                android:scaleType="centerInside"
                android:src="@drawable/ic_faq" />

            <TextView
                android:id="@+id/header_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="4dp"
                android:gravity="center_horizontal"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:fontFamily="sans-serif-medium" />

            <TextView
                android:id="@+id/headerTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="2dp"
                android:gravity="center_horizontal"
                android:textColor="#EEEEEE"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:text="@string/faq_header"
                android:textColor="#EEEEEE"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/access_logo_tmdb"
                android:src="@drawable/tmdb_logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.1"
                android:text="@string/faq_tmdb_notice"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
