<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.introduction.IntroductionActivity">

    <!-- Main content -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/gridView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- Grid view overlay -->
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.6"
        android:background="@android:color/black" />

    <!-- Movie posterPath grid view -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/default_space">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/access_app_icon"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_faq" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-medium"
            android:paddingStart="@dimen/activity_margin"
            android:paddingLeft="@dimen/activity_margin"
            android:paddingEnd="@dimen/activity_margin"
            android:paddingRight="@dimen/activity_margin"
            android:text="@string/welcome_header"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.1"
            android:paddingStart="@dimen/activity_margin"
            android:paddingLeft="@dimen/activity_margin"
            android:paddingEnd="@dimen/activity_margin"
            android:paddingRight="@dimen/activity_margin"
            android:text="@string/welcome_text"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/introductionButton"
        style="@style/LargeButton"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/default_space"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:alpha="0"
        app:cornerRadius="@dimen/small_space"
        tools:alpha="1" />

</FrameLayout>
