<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".main.DiscoverMoreFragment">

    <!-- Error title -->
    <TextView
        android:id="@+id/discover_more_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_margin"
        android:layout_marginEnd="@dimen/activity_margin"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:paddingLeft="@dimen/activity_margin"
        android:paddingTop="@dimen/activity_margin"
        android:paddingRight="@dimen/activity_margin"
        android:singleLine="true"
        android:text="@string/no_more_recommendations"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <!-- Error text -->
    <TextView
        android:id="@+id/discover_more_text"
        android:layout_height="wrap_content"
        android:layout_below="@+id/discover_more_title"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/activity_margin"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/activity_margin"
        android:gravity="center"
        android:lineSpacingMultiplier="1.1"
        android:text="@string/try_other_recommendation_source"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_widthPercent="80%" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/discoverMoreButton"
        style="?attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/discover_more_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        android:text="@string/try_it"
        android:textColor="@color/app_color"
        android:textSize="16sp" />

</android.support.percent.PercentRelativeLayout>