<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".ui.selectmovies.SelectMoviesActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginTop="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:layout_marginBottom="10dp"
        android:text="@string/select_movies_header"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginTop="5dp"
        android:layout_marginRight="@dimen/activity_margin"
        android:layout_marginBottom="10dp"
        android:text="@string/select_movies_text"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/gridView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="80dp"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button"
            style="@style/LargeButton"
            android:layout_gravity="bottom"
            android:layout_margin="@dimen/default_space"
            android:clickable="false"
            android:enabled="false"
            android:text="@string/finish"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:backgroundTint="@color/selector_conditional_next_button"
            app:cornerRadius="@dimen/small_space" />

    </FrameLayout>

    <include
        android:id="@+id/error_container"
        layout="@layout/view_samples_error"
        android:visibility="gone" />

</LinearLayout>
