<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".selectmovies.SelectMoviesActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginTop="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:layout_marginBottom="10dp"
        android:text="@string/select_movies_header"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginTop="5dp"
        android:layout_marginRight="@dimen/activity_margin"
        android:layout_marginBottom="10dp"
        android:text="@string/select_movies_text"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <GridView
            android:id="@+id/grid_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:horizontalSpacing="@dimen/activity_margin"
            android:numColumns="3"
            android:paddingStart="@dimen/default_space"
            android:paddingTop="@dimen/default_space"
            android:paddingEnd="@dimen/default_space"
            android:paddingBottom="80dp"
            android:scrollbars="none"
            android:stretchMode="columnWidth"
            android:verticalSpacing="@dimen/activity_margin"
            android:visibility="gone" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_gravity="bottom"
            android:layout_margin="@dimen/small_space"
            android:clickable="false"
            android:text="@string/finish"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            app:backgroundTint="@color/colorAccent" />

    </FrameLayout>

    <include
        android:id="@+id/error_container"
        layout="@layout/view_samples_error"
        android:visibility="gone" />

</LinearLayout>
